# lab-projetos-es-inteligente-PP2

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: __init__.py  download_docs.py  ingest.py
src/unibot/: __init__.py  agent.py  config.py  models.py  protocols.py
src/unibot/interface/: __init__.py  app.py
src/unibot/memory/: __init__.py  storage.py
src/unibot/rag/: __init__.py  embedder.py  knowledge_base.py
src/unibot/tools/: __init__.py  search.py
