[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unibot"
version = "0.1.0"
description = "UniBot: UNIPAMPA institutional document assistant using RAG"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.4.4",
    "ollama>=0.3.0",
    "openai>=1.0.0",
    "lancedb>=0.20.0",
    "tantivy>=0.22.0",
    "fastembed>=0.4.1",
    "duckduckgo-search>=7.5.0",
    "ddgs>=9.0.0",
    "streamlit>=1.42.0",
    "pypdf>=5.1.0",
    "pydantic-settings>=2.7.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
    "types-beautifulsoup4>=4.12.0",
]

[project.scripts]
unibot-ingest = "scripts.ingest:main"
unibot-download = "scripts.download_docs:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unibot"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
